--- a/NEWS
+++ b/NEWS
@@ -25,8 +25,9 @@ mlr_2.4:
 -- getTaskSize
 -- getNestedTuneResultsX, getNestedTuneResultsOptPathDf
 -- tuneDesign
--- generateROCRCurvesData, generateFilterValuesData, generateLearningCurveData, plotLearningCurve 
--- experimental ggvis functions: plotROCRCurvesGGVIS, plotLearningCurveGGVIS, 
+-- generateROCRCurvesData, generateFilterValuesData, generateLearningCurveData, plotLearningCurve,
+   generateThreshVsPerfData, plotThreshVsPerf
+-- experimental ggvis functions: plotROCRCurvesGGVIS, plotLearningCurveGGVIS,
    plotTuneMultiCritResultGGVIS, plotThreshVsPerfGGVIS, and plotFilterValuesGGVIS
 
 - new learners:
