--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,7 @@ mlr_2.4:
 - reg.km: added param 'iso'
 - classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
   and 'criterion'.
-- plotThreshVsPerf and plotLearningCurve now have params 'color' and 'facet'
+- plotThreshVsPerf and plotLearningCurve now have param 'facet'
 
 - new functions
 -- getTaskSize
