--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ mlr_2.4:
 - showHyperPars was removed. getParamSet does exactly the same thing
 - 'resample' and 'benchmark' got the argument keep.pred,
   setting it to FALSE allows to discard the prediction objects to save memory
-- we had to slightly change how the mem usage is reported in tuning and feature selection.
+- we had to slightly change how the mem usage is reported in tuning and feature selection
   See TuneControl and FeatSelControl where it is documented what is done now.
 - tuneIrace: allows to set the precision / digits within irace (using the argument 'digits'
   in makeTuneControlIrace); default is maximum precision
@@ -21,7 +21,8 @@ mlr_2.4:
 - learner xgboost was removed, because the package is not on CRAN anymore, unfortunately
 - reg.km: added param 'iso'
 - classif.mda: added param 'start.method' and changed its default to 'lvq', added params 'sub.df', 'tot.df'
-  and 'criterion'.
+  and 'criterion'
+- classif.randomForest: 'sampsize' can now be an int vector (instead of a scalar)
 - plotThreshVsPerf and plotLearningCurve now have param 'facet'
 
 - new functions
