--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+mlr_2.5:
+
 mlr_2.4:
 - WrappedModel printer was slightly improved
 - ReampleResult now stores the runtime it took to resample in a slot
