introduced budget parameter to tuning

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 mlr_2.5:
+- tuning: added 'budget' parameter in makeTuneControl*, allowing to define a maximum budget for tuning
+- makeTuneControlGenSA: optimized function will be considered non-smooth per default (change via ...)
 
 mlr_2.4:
 - WrappedModel printer was slightly improved
