--- a/vignettes/mlr.Rmd
+++ b/vignettes/mlr.Rmd
@@ -15,8 +15,10 @@ This Vignette is supposed to give you a short introductory glance at the key fea
 A more detailed in depth and continuously updated tutorial can be found on the GitHub project page:
 
 - [Project Page](https://github.com/berndbischl/mlr/)
-- [Online Tutorial](http://berndbischl.github.io/mlr/tutorial/html/)
-- [Download](http://berndbischl.github.io/mlr/tutorial/mlr_tutorial.zip) online tutorial as zip for offline usage
+- Online Tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/tutorial/release/html/)
+  and [mlr devel](https://mlr-org.github.io/mlr-tutorial/tutorial/devel/html/)
+- Download the online tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/tutorial/release/mlr_tutorial.zip)
+  and [mlr devel](https://mlr-org.github.io/mlr-tutorial/tutorial/devel/mlr_tutorial.zip) as zip for offline usage
 
 ## Purpose
 
