--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ mlr_2.5:
   not needed anymore
 
 - new functions
+-- getDefaultMeasure
 -- getTaskClassLevels
 -- getPredictionTruth, getPredictionResponse
 -- convertMLBenchObjToTask
