--- a/vignettes/mlr.Rmd
+++ b/vignettes/mlr.Rmd
@@ -14,7 +14,7 @@ vignette: >
 This Vignette is supposed to give you a short introductory glance at the key features of `mlr`.
 A more detailed in depth and continuously updated tutorial can be found on the GitHub project page:
 
-- [Project Page](https://github.com/berndbischl/mlr/)
+- [Project Page](https://github.com/mlr-org/mlr/)
 - Online Tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/release/html/)
   and [mlr devel](https://mlr-org.github.io/mlr-tutorial/devel/html/)
 - Download the online tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/release/mlr_tutorial.zip)
@@ -78,13 +78,13 @@ More features are covered in the tutorial which can be found online on the `mlr`
 It covers among others: *benchmarking*, *preprocessing*, *imputation*, *feature selection*, *ROC analysis*, how to implement your own learner and the list of all supported learners.
 Reading is highly recommended!
 
-* [Project Page](https://github.com/berndbischl/mlr/)
+* [Project Page](https://github.com/mlr-org/mlr/)
 * Online Tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/release/html/)
   and [mlr devel](https://mlr-org.github.io/mlr-tutorial/devel/html/)
 * Offline Tutorial: online tutorial for [mlr release](https://mlr-org.github.io/mlr-tutorial/release/mlr_tutorial.zip)
   and [mlr devel](https://mlr-org.github.io/mlr-tutorial/devel/mlr_tutorial.zip)
   as zip for offline usage
-* [Wiki](https://github.com/berndbischl/mlr/wiki) with additional information for developers
+* [Wiki](https://github.com/mlr-org/mlr/wiki) with additional information for developers
 
 
 ## Thanks
