--- a/NEWS
+++ b/NEWS
@@ -69,6 +69,8 @@ mlr_2.5:
 -- classif.saeDNN
 -- classif.dbnDNN
 -- classif.nnTrain
+-- classif.rknn
+-- regr.rknn
 
 - new filters
 -- permutation.importance
