adds plotROCCurves using to generateThreshVsPerf
 - adds aggregate argument to generateThreshVsPerfData
   which gives performance per iteration or avg performance
   (temporary until #431 fixed)
 - tests/news update

--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,7 @@ mlr_2.5:
 -- getCaretParamSet
 -- generateCalibrationData and plotCalibration
 -- relativeOverfitting
+-- plotROCCurves
 
 - new measures
 -- hamloss
